# hypermodern-python

./: .darglint  .flake8  .python-version  README.md  noxfile.py  pyproject.toml  pyrightconfig.json
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
