[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
license = "GNU"
authors = ["antikytheraton <16123078+antikytheraton@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/antikytheraton/hypermodern-python"
repository = "https://github.com/antikytheraton/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.6.5"
flake8-import-order = "^0.18.2"
safety = "^2.3.5"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
